# lazy-calories

./: .dockerignore  .env-template  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
docs/: DEPLOYMENT.md
scripts/: seed_vector_store.py
src/common/: clock.py  config.py  db.py  llm.py  logger.py  prompts_validator.py  start.py
src/consumption/: agent.py  bot.py  graph.py  intents.py  models.py  prompts.py  replies.py  resolver.py  state.py  storage.py  vector_store.py
